Fix text overflow in gutter

--- a/styles/git-blame.less
+++ b/styles/git-blame.less
@@ -31,6 +31,7 @@ atom-text-editor .gutter[gutter-name="com.alexcorre.git-blame"] {
     overflow: hidden;
     text-overflow: ellipsis;
     text-align: left;
+    white-space: nowrap;
     padding: 0 4px;
 
     &.lighter {
